# content-generator

./: LICENSE  README.md  README_HF_SPACE.md  app.py  config.yaml  env.example  main.py  pyproject.toml  requirements.txt  start.sh
data/simple_db/: vector_store.db  vectorizer.pkl
generated_content/: jenosize_content_history.xlsx
src/: __init__.py  auto_style_learner.py
src/agents/: __init__.py  base_agent.py  coordinator.py  researcher_agent.py  reviewer_agent.py  rewriter_agent.py  writer_agent.py
src/api/: __init__.py  main.py  models.py
src/core/: __init__.py  config.py  data_pipeline.py  ollama_client.py
src/frontend/: __init__.py  gradio_app.py
src/rag/: __init__.py  jenosize_scraper.py  manual_jenosize_content.py  simple_vector_store.py
src/utils/: __init__.py  excel_export.py
